--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<meta name="theme-color" content="#ffffff">
 		<!-- Favicons End -->
 		<title>Главная</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1750231423228"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750231423228">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1750262763255"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750262763255">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -269,9 +269,7 @@
 						<div class="block__content">
 							<div class="block-head" data-fls-blocktitle="">
 								<div class="block-head__picture block-head__picture_left">
-									<svg>
-										<use xlink:href="./assets/img/spritemap.svg#sprite-arrow1"></use>
-									</svg>
+									<img src="./assets/img/svg/arrowGreen.svg" alt="Image">
 								</div>
 								<h1 class="block-head__title">Чего Вы хотите от праздника на самом деле?</h1>
 								<div class="block-head__description substrate substrate_orange substrate_left">Оживим вашу мечту, просто выберите:</div>
@@ -359,9 +357,7 @@
 						<div class="block__content">
 							<div class="block-head" data-fls-blocktitle="">
 								<div class="block-head__picture block-head__picture_right">
-									<svg>
-										<use xlink:href="./assets/img/spritemap.svg#sprite-arrow1"></use>
-									</svg>
+									<img src="./assets/img/svg/arrowGreen.svg" alt="Image">
 								</div>
 								<h1 class="block-head__title">Какие праздники мы организуем: детские, взрослые, корпоративные</h1>
 								<div class="block-head__description substrate substrate_green substrate_">
@@ -439,6 +435,356 @@
 										</div>
 									</div>
 								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="block" id="whatsincluded">
+					<div class="block__container">
+						<div class="block__content">
+							<div class="block-head" data-fls-blocktitle="">
+								<div class="block-head__picture block-head__picture_right">
+									<svg>
+										<use xlink:href="./assets/img/spritemap.svg#sprite-arrow1"></use>
+									</svg>
+								</div>
+								<h1 class="block-head__title">Что входит в организацию праздника под ключ</h1>
+								<div class="block-head__description substrate substrate_purple substrate_right">Переписка, которая показывает, как это на самом деле просто</div>
+							</div>
+							<div class="block-body">
+								<div class="whatsincluded" data-fls-whatsincluded="">
+									<div class="whatsincluded__decor">
+										<svg>
+											<use xlink:href="./assets/img/spritemap.svg#sprite-firework"></use>
+										</svg>
+									</div>
+									<div class="whatsincluded__content">
+										<div class="whatsincluded__left">
+											<div class="whatsincluded__item">
+												<div class="whatsincluded__img">
+													<picture>
+														<source media="(max-width: 600px)" srcset="./assets/img/whatinclude/what2-600.webp" type="image/webp">
+														<source media="(max-width: 1200px)" srcset="./assets/img/whatinclude/what2-1200.webp" type="image/webp">
+														<img alt="Фото 1" src="./assets/img/whatinclude/what2.webp">
+													</picture>
+												</div>
+												<div class="whatsincluded__item-decor">
+													<img src="./assets/img/svg/arrowBlue.svg" alt="Image">
+												</div>
+											</div>
+											<div class="whatsincluded__item">
+												<div class="substrate substrate_purple">эмоции</div>
+												<div class="whatsincluded__img">
+													<picture>
+														<source media="(max-width: 600px)" srcset="./assets/img/whatinclude/what4-600.webp" type="image/webp">
+														<img alt="Фото 2" src="./assets/img/whatinclude/what4.webp">
+													</picture>
+												</div>
+											</div>
+										</div>
+										<div class="whatsincluded__center">
+											<div class="whatsincluded__phone">
+												<picture>
+													<img alt="Фото 5" src="./assets/img/whatinclude/phone.webp">
+												</picture>
+											</div>
+											<div class="whatsincluded__button">
+												<button class="button">
+													<span></span>
+													Такой же быстрый ответ, как в чат выше
+												</button>
+												<p class="whatsincluded__text">Спрашивайте, мы не роботы. А почти феи</p>
+											</div>
+										</div>
+										<div class="whatsincluded__right">
+											<div class="whatsincluded__item">
+												<div class="whatsincluded__img">
+													<picture>
+														<source media="(max-width: 600px)" srcset="./assets/img/whatinclude/what3-600.webp" type="image/webp">
+														<img alt="Фото 3" src="./assets/img/whatinclude/what3.webp">
+													</picture>
+												</div>
+											</div>
+											<div class="whatsincluded__item">
+												<div class="substrate substrate_blue">воспоминания</div>
+												<div class="whatsincluded__img">
+													<picture>
+														<source media="(max-width: 600px)" srcset="./assets/img/whatinclude/what1-600.webp" type="image/webp">
+														<source media="(max-width: 1200px)" srcset="./assets/img/whatinclude/what1-1200.webp" type="image/webp">
+														<img alt="Фото 4" src="./assets/img/whatinclude/what1.webp">
+													</picture>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="block" id="scenario">
+					<div class="block__img">
+						<img src="./assets/img/svg/lineBlue.svg" alt="image">
+					</div>
+					<div class="block__container">
+						<div class="block__content">
+							<div class="block-head" data-fls-blocktitle="">
+								<h1 class="block-head__title">Сценарии, рождающие эмоции. Выберите свой!</h1>
+								<div class="block-head__description substrate substrate_orange substrate_left">
+									Дети становятся искателями приключений, друзья — героями фильма, а коллеги — легендами офиса
+								</div>
+							</div>
+							<div class="block-body">
+								<div class="scenario" data-fls-scenariocard="">
+									<div class="scenario__content">
+										<div class="scenario-card">
+											<div class="scenario-card__image">
+												<picture>
+													<source media="(max-width: 600px)" srcset="./assets/img/scenario/scenario1-600.webp" type="image/webp">
+													<source media="(max-width: 1200px)" srcset="./assets/img/scenario/scenario1-1200.webp" type="image/webp">
+													<img alt="Image" src="./assets/img/scenario/scenario1.webp">
+												</picture>
+											</div>
+											<div class="scenario-card__content">
+												<div class="scenario-card__bars">
+													<div class="bar-item substrate substrate_purple">
+														<picture>
+															<img alt="Image" src="./assets/img/smiles/sword.webp">
+														</picture>
+														<span>Испытания</span>
+													</div>
+													<div class="bar-item substrate substrate_purple">
+														<picture>
+															<img alt="Image" src="./assets/img/smiles/panch.webp">
+														</picture>
+														<span>Команда</span>
+													</div>
+													<div class="bar-item substrate substrate_purple">
+														<picture>
+															<img alt="Image" src="./assets/img/smiles/stars.webp">
+														</picture>
+														<span>Атмосфера</span>
+													</div>
+												</div>
+												<div class="scenario-card__button">
+													<button class="button button_purple">
+														<span></span>
+														Форт Боярд
+													</button>
+												</div>
+											</div>
+										</div>
+										<div class="scenario-card">
+											<div class="scenario-card__image">
+												<picture>
+													<source media="(max-width: 600px)" srcset="./assets/img/scenario/scenario2-600.webp" type="image/webp">
+													<source media="(max-width: 1200px)" srcset="./assets/img/scenario/scenario2-1200.webp" type="image/webp">
+													<img alt="Image" src="./assets/img/scenario/scenario2.webp">
+												</picture>
+											</div>
+											<div class="scenario-card__content">
+												<div class="scenario-card__bars">
+													<div class="bar-item substrate substrate_purple">
+														<picture>
+															<img alt="Image" src="./assets/img/smiles/clock.webp">
+														</picture>
+														<span>Скорость</span>
+													</div>
+													<div class="bar-item substrate substrate_purple">
+														<picture>
+															<img alt="Image" src="./assets/img/smiles/prize.webp">
+														</picture>
+														<span>Стратегия</span>
+													</div>
+													<div class="bar-item substrate substrate_purple">
+														<picture>
+															<img alt="Image" src="./assets/img/smiles/smile5.webp">
+														</picture>
+														<span>Эмоции</span>
+													</div>
+												</div>
+												<div class="scenario-card__button">
+													<button class="button button_purple">
+														<span></span>
+														Я первый!
+													</button>
+												</div>
+											</div>
+										</div>
+										<div class="scenario-card">
+											<div class="scenario-card__image">
+												<picture>
+													<source media="(max-width: 600px)" srcset="./assets/img/scenario/scenario3-600.webp" type="image/webp">
+													<source media="(max-width: 1200px)" srcset="./assets/img/scenario/scenario3-1200.webp" type="image/webp">
+													<img alt="Image" src="./assets/img/scenario/scenario3.webp">
+												</picture>
+											</div>
+											<div class="scenario-card__content">
+												<div class="scenario-card__bars">
+													<div class="bar-item substrate substrate_purple">
+														<picture>
+															<img alt="Image" src="./assets/img/smiles/detective.webp">
+														</picture>
+														<span>Детектив</span>
+													</div>
+													<div class="bar-item substrate substrate_purple">
+														<picture>
+															<img alt="Image" src="./assets/img/smiles/question.webp">
+														</picture>
+														<span>Логика</span>
+													</div>
+													<div class="bar-item substrate substrate_purple">
+														<picture>
+															<img alt="Image" src="./assets/img/smiles/brain.webp">
+														</picture>
+														<span>Разум</span>
+													</div>
+												</div>
+												<div class="scenario-card__button">
+													<button class="button button_purple">
+														<span></span>
+														Мафия Форта
+													</button>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="scenario__button">
+										<p class="scenario__text">Не знаете, что выбрать?</p>
+										<button class="button button_orange">
+											<span></span>
+											Расскажите, кого хотите порадовать
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="block" id="quiz">
+					<div class="block__container">
+						<div class="block__content">
+							<div class="block-head" data-fls-blocktitle="">
+								<h1 class="block-head__title">Поможем вам понять, какой праздник вам подойдет за 1 минуту</h1>
+								<div class="block-head__description substrate substrate_green substrate_right">
+									Мы хотим, чтобы вы сказали: – Да, я представляю праздник своей мечты именно так. Для этого просто ответьте на 4 вопроса
+								</div>
+							</div>
+							<div class="block-body">
+								<div class="quiz">
+									<div class="quiz__body">
+										<div class="quiz__text">Марквиз</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="block" id="reviews">
+					<div class="block__container">
+						<div class="block__content">
+							<div class="block-head" data-fls-blocktitle="">
+								<h1 class="block-head__title">
+									Отзывы отзывами, но мы покажем вам эмоциональные моменты, которые откликнутся в вас по-своему
+								</h1>
+								<div class="block-head__description substrate substrate_orange substrate_">Искрении эмоции людей лучше любых отзывов</div>
+							</div>
+							<div class="block-body">
+								<div class="reviews" data-fls-reviews="">
+									<div class="reviews__content">
+										<div class="reviews-card">
+											<div class="reviews-card__img">
+												<picture>
+													<source media="(max-width: 600px)" srcset="./assets/img/reviews/reviews1-600.webp" type="image/webp">
+													<source media="(max-width: 1200px)" srcset="./assets/img/reviews/reviews1-1200.webp" type="image/webp">
+													<img alt="Image" src="./assets/img/reviews/reviews1.webp">
+												</picture>
+											</div>
+											<div class="reviews-card__text">«Торт в руках. А глаза — шире вселенной»</div>
+										</div>
+										<div class="reviews-card">
+											<div class="decor">
+												<img class="decor__img" src="./assets/img/svg/arrowPurple.svg" alt="Image">
+											</div>
+											<div class="reviews-card__img">
+												<picture>
+													<source media="(max-width: 600px)" srcset="./assets/img/reviews/reviews2-600.webp" type="image/webp">
+													<source media="(max-width: 1200px)" srcset="./assets/img/reviews/reviews2-1200.webp" type="image/webp">
+													<img alt="Image" src="./assets/img/reviews/reviews2.webp">
+												</picture>
+											</div>
+											<div class="reviews-card__text">«Торт в руках. А глаза — шире вселенной»</div>
+										</div>
+										<div class="reviews-card">
+											<div class="decor">
+												<svg class="decor__svg">
+													<use xlink:href="./assets/img/spritemap.svg#sprite-firework"></use>
+												</svg>
+											</div>
+											<div class="reviews-card__img">
+												<picture>
+													<source media="(max-width: 600px)" srcset="./assets/img/reviews/reviews3-600.webp" type="image/webp">
+													<source media="(max-width: 1200px)" srcset="./assets/img/reviews/reviews3-1200.webp" type="image/webp">
+													<img alt="Image" src="./assets/img/reviews/reviews3.webp">
+												</picture>
+											</div>
+											<div class="reviews-card__text">«Торт в руках. А глаза — шире вселенной»</div>
+										</div>
+										<div class="reviews-card">
+											<div class="decor">
+												<svg class="decor__svg">
+													<use xlink:href="./assets/img/spritemap.svg#sprite-firework"></use>
+												</svg>
+											</div>
+											<div class="reviews-card__img">
+												<picture>
+													<source media="(max-width: 600px)" srcset="./assets/img/reviews/reviews4-600.webp" type="image/webp">
+													<source media="(max-width: 1200px)" srcset="./assets/img/reviews/reviews4-1200.webp" type="image/webp">
+													<img alt="Image" src="./assets/img/reviews/reviews4.webp">
+												</picture>
+											</div>
+											<div class="reviews-card__text">«Торт в руках. А глаза — шире вселенной»</div>
+										</div>
+										<div class="reviews-card">
+											<div class="reviews-card__img">
+												<picture>
+													<source media="(max-width: 600px)" srcset="./assets/img/reviews/reviews5-600.webp" type="image/webp">
+													<source media="(max-width: 1200px)" srcset="./assets/img/reviews/reviews5-1200.webp" type="image/webp">
+													<img alt="Image" src="./assets/img/reviews/reviews5.webp">
+												</picture>
+											</div>
+											<div class="reviews-card__text">«Торт в руках. А глаза — шире вселенной»</div>
+										</div>
+										<div class="reviews-card">
+											<div class="reviews-card__img">
+												<picture>
+													<source media="(max-width: 600px)" srcset="./assets/img/reviews/reviews6-600.webp" type="image/webp">
+													<source media="(max-width: 1200px)" srcset="./assets/img/reviews/reviews6-1200.webp" type="image/webp">
+													<img alt="Image" src="./assets/img/reviews/reviews6.webp">
+												</picture>
+											</div>
+											<div class="reviews-card__text">«Торт в руках. А глаза — шире вселенной»</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="block reviews-details" id="reviews-details">
+					<div class="reviews-details__img">
+						<picture>
+							<source media="(max-width: 600px)" srcset="./assets/img/reviews/imageDetails1-600.webp" type="image/webp">
+							<source media="(max-width: 1200px)" srcset="./assets/img/reviews/imageDetails1-1200.webp" type="image/webp">
+							<img alt="Image" src="./assets/img/reviews/imageDetails1.webp">
+						</picture>
+					</div>
+					<div class="block__container">
+						<div class="block__content">
+							<div class="block-body">
+								<picture>
+									<img alt="Image" src="./assets/img/reviews/reviewsDetails2.webp">
+								</picture>
 							</div>
 						</div>
 					</div>
