--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<meta name="theme-color" content="#ffffff">
 		<!-- Favicons End -->
 		<title>Главная</title>
-		<script type="module" crossorigin="" src="./js/index.min.js?v=1750262763255"></script>
-		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750262763255">
+		<script type="module" crossorigin="" src="./js/index.min.js?v=1750344898112"></script>
+		<link rel="stylesheet" crossorigin="" href="./css/index.min.css?v=1750344898112">
 	</head>
 	<body>
 		<div class="wrapper">
@@ -789,9 +789,255 @@
 						</div>
 					</div>
 				</section>
+				<section class="block" id="doubts">
+					<div class="block__container">
+						<div class="block__content">
+							<div class="block-head" data-fls-blocktitle="">
+								<div class="block-head__picture block-head__picture_left">
+									<img src="./assets/img/svg/arrowGreen.svg" alt="Image">
+								</div>
+								<h1 class="block-head__title">Развеем сомнения — до первого звонка</h1>
+								<div class="block-head__description substrate substrate_purple substrate_left">Вопросы, которые вы всё равно бы задали. Только мы уже ответили</div>
+							</div>
+							<div class="block-body">
+								<div class="doubts" data-fls-doubts="">
+									<div class="doubts__content">
+										<!-- 1 -->
+										<div class="doubts__block">
+											<div class="doubts-item">
+												<div class="doubts-item__title">Можно ли заказать только квест, без банкета?</div>
+												<div class="doubts-hidden">
+													<div class="doubts-hidden__description">
+														<div class="doubts-hidden__title">Что входит в “праздник под ключ”?</div>
+														<div class="doubts-hidden__text">
+															Сценарий, площадка, шоу, еда, декор, подарки, ведущий, координация,
+              реквизит
+              — весь цикл. Вы просто приходите и наслаждаетесь.
+														</div>
+													</div>
+													<button class="button">
+														<span></span>
+														Сколько стоит праздник под ключ?
+													</button>
+												</div>
+											</div>
+											<div class="doubts-item">
+												<div class="doubts-item__title">Что входит в “праздник под ключ”?</div>
+												<div class="doubts-hidden">
+													<div class="doubts-hidden__description">
+														<div class="doubts-hidden__title">Что входит в “праздник под ключ”?</div>
+														<div class="doubts-hidden__text">
+															Сценарий, площадка, шоу, еда, декор, подарки, ведущий, координация,
+              реквизит
+              — весь цикл. Вы просто приходите и наслаждаетесь.
+														</div>
+													</div>
+													<button class="button">
+														<span></span>
+														Сколько стоит праздник под ключ?
+													</button>
+												</div>
+											</div>
+										</div>
+										<!-- 2 -->
+										<div class="doubts__block">
+											<div class="decor">
+												<svg class="decor__svg">
+													<use xlink:href="./assets/img/spritemap.svg__1d3939c5#sprite-arrowSimple"></use>
+												</svg>
+											</div>
+											<div class="decor">
+												<svg class="decor__svg">
+													<use xlink:href="./assets/img/spritemap.svg__1d3939c5#sprite-firework"></use>
+												</svg>
+											</div>
+											<div class="doubts-item">
+												<div class="doubts-item__title">Какие сценарии подойдут для 30-летия взрослого?</div>
+												<div class="doubts-hidden">
+													<div class="doubts-hidden__description">
+														<div class="doubts-hidden__title">Что входит в “праздник под ключ”?</div>
+														<div class="doubts-hidden__text">
+															Сценарий, площадка, шоу, еда, декор, подарки, ведущий, координация,
+              реквизит
+              — весь цикл. Вы просто приходите и наслаждаетесь.
+														</div>
+													</div>
+													<button class="button">
+														<span></span>
+														Сколько стоит праздник под ключ?
+													</button>
+												</div>
+											</div>
+											<div class="doubts-item">
+												<div class="doubts-item__title">Что вы предлагаете для корпоративов на 100+ человек?</div>
+												<div class="doubts-hidden">
+													<div class="doubts-hidden__description">
+														<div class="doubts-hidden__title">Что входит в “праздник под ключ”?</div>
+														<div class="doubts-hidden__text">
+															Сценарий, площадка, шоу, еда, декор, подарки, ведущий, координация,
+              реквизит
+              — весь цикл. Вы просто приходите и наслаждаетесь.
+														</div>
+													</div>
+													<button class="button">
+														<span></span>
+														Сколько стоит праздник под ключ?
+													</button>
+												</div>
+											</div>
+										</div>
+										<!-- 3 -->
+										<div class="doubts__block">
+											<div class="doubts-item">
+												<div class="doubts-item__title">Как рассчитывается стоимость?</div>
+												<div class="doubts-hidden">
+													<div class="doubts-hidden__description">
+														<div class="doubts-hidden__title">Что входит в “праздник под ключ”?</div>
+														<div class="doubts-hidden__text">
+															Сценарий, площадка, шоу, еда, декор, подарки, ведущий, координация,
+              реквизит
+              — весь цикл. Вы просто приходите и наслаждаетесь.
+														</div>
+													</div>
+													<button class="button">
+														<span></span>
+														Сколько стоит праздник под ключ?
+													</button>
+												</div>
+											</div>
+											<div class="doubts-item">
+												<div class="doubts-item__title">Мы живём за МКАД — выезд возможен?</div>
+												<div class="doubts-hidden">
+													<div class="doubts-hidden__description">
+														<div class="doubts-hidden__title">Что входит в “праздник под ключ”?</div>
+														<div class="doubts-hidden__text">
+															Сценарий, площадка, шоу, еда, декор, подарки, ведущий, координация,
+              реквизит
+              — весь цикл. Вы просто приходите и наслаждаетесь.
+														</div>
+													</div>
+													<button class="button">
+														<span></span>
+														Сколько стоит праздник под ключ?
+													</button>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="block feedback" id="feedback" data-fls-feedback="">
+					<div class="feedback__img">
+						<picture>
+							<source media="(max-width: 600px)" srcset="./assets/img/bg/bg-FeedBack-600.webp" type="image/webp">
+							<source media="(max-width: 1200px)" srcset="./assets/img/bg/bg-FeedBack-1200.webp" type="image/webp">
+							<img alt="feedback" src="./assets/img/bg/bg-FeedBack.webp">
+						</picture>
+					</div>
+					<div class="block__container">
+						<div class="block__content">
+							<div class="block-head" data-fls-blocktitle="">
+								<h1 class="block-head__title">Сценарий, цена и идеи под вас — через 15 минут на WhatsApp</h1>
+								<div class="block-head__description substrate substrate_blue substrate_">Давайте начнем разговор, который станет началом истории</div>
+							</div>
+							<div class="block-body">
+								<form class="feedback-form" autocomplete="off" data-fls-form="ajax" method="POST" action="">
+									<div class="feedback-form__fields">
+										<label for="name">Ваше имя</label>
+										<input id="name" name="name" type="text" class="input" placeholder="Ваше имя" required autocomplete="on" aria-label="Ваше имя" data-fls-input="">
+										<label for="tel">Телефон</label>
+										<input id="tel" name="tel" type="tel" class="input" placeholder="Телефон" required autocomplete="off" aria-label="Телефон" data-fls-input="">
+									</div>
+									<div class="feedback-form__privacy">
+										Нажимая на кнопку отправить вы соглашаетесь с
+										<a href="/privacy" target="_blank">условиями обработки информации</a>
+									</div>
+									<button type="submit" class="button button_purple">
+										<span></span>
+										Отправить заявку
+									</button>
+								</form>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="block address" id="address" data-fls-address="">
+					<div class="address__container">
+						<div class="address__content">
+							<div class="decor">
+								<svg class="decor__svg">
+									<use xlink:href="./assets/img/spritemap.svg#sprite-firework"></use>
+								</svg>
+							</div>
+							<h2 class="address__title">Хотите сначала посмотреть, как это выглядит вживую?</h2>
+							<div class="address__desc">
+								Проведём для вас экскурсию по площадке — покажем свет, реквизит, ведущих, эмоции. Просто напишите в WhatsApp или
+        Telegram — назначим время.
+								<br>
+								<span class="address__phone">
+									Телефон:
+									<a href="tel:+79993454455">+7 999 345 44 55</a>
+								</span>
+							</div>
+							<div class="address__contacts">
+								<a href="https://t.me/79993454455" target="_blank" class="address__icon address__icon--tg" aria-label="Telegram">
+									<svg>
+										<use xlink:href="./assets/img/spritemap.svg#sprite-telegram"></use>
+									</svg>
+								</a>
+								<a href="https://wa.me/79993454455" target="_blank" class="address__icon address__icon--wa" aria-label="WhatsApp">
+									<svg>
+										<use xlink:href="./assets/img/spritemap.svg#sprite-whatsapp"></use>
+									</svg>
+								</a>
+							</div>
+						</div>
+						<div class="address__map">
+							<!-- Вставьте сюда iframe Яндекс.Карты или div для карты -->
+							<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A4e2e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1e2b1&amp;source=constructor" width="100%" frameborder="0" loading="lazy" allowfullscreen></iframe>
+						</div>
+					</div>
+				</section>
 			</main>
-			<footer data-fls-footer="" class="footer">
-				<div class="footer__container"></div>
+			<footer data-fls-footer="" class="footer" id="footer">
+				<div class="footer__container">
+					<div class="footer__content">
+						<div class="decor">
+							<img src="./assets/img/svg/arrowGreen.svg" alt="Image">
+						</div>
+						<div class="logo" data-fls-logo="">
+							<div class="decor">
+								<svg class="decor__svg">
+									<use xlink:href="./assets/img/spritemap.svg#sprite-firework"></use>
+								</svg>
+							</div>
+							<a href="/" class="logo__link">
+								<picture>
+									<img alt="Logo" class="logo__img" src="./assets/img/logo/logo.webp">
+								</picture>
+							</a>
+							<div class="logo__slogan">Создаём незабываемые моменты для вас!</div>
+						</div>
+						<div class="footer-menu">
+							<nav class="footer-menu__navigation">
+								<a href="#" class="footer-menu__link">Праздники для детей</a>
+								<a href="#" class="footer-menu__link">Где провести праздник</a>
+								<a href="#" class="footer-menu__link">Праздники для взрослых</a>
+								<a href="#" class="footer-menu__link">Цены</a>
+								<a href="#" class="footer-menu__link">Сценарии и шоу</a>
+								<a href="#" class="footer-menu__link">О нас</a>
+							</nav>
+							<div class="decor">
+								<svg class="decor__svg">
+									<use xlink:href="./assets/img/spritemap.svg__#sprite-firework"></use>
+								</svg>
+							</div>
+						</div>
+					</div>
+				</div>
 			</footer>
 		</div>
 		<div class="menu mobile-menu">
